--- a/GUI_TouchGFX.ioc
+++ b/GUI_TouchGFX.ioc
@@ -56,47 +56,61 @@ Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
+Mcu.IP10=TIM3
+Mcu.IP11=TIM4
+Mcu.IP12=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SPI2
-Mcu.IP7=SYS
-Mcu.IP8=TIM2
-Mcu.IP9=TIM3
-Mcu.IPNb=10
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IPNb=13
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB2
-Mcu.Pin16=PB10
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PB1
+Mcu.Pin16=PB2
+Mcu.Pin17=PB10
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
 Mcu.Pin2=PC0
-Mcu.Pin20=PB15
-Mcu.Pin21=PD12
-Mcu.Pin22=PC7
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=VP_CRC_VS_CRC
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin28=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2
-Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=29
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PD12
+Mcu.Pin23=PD13
+Mcu.Pin24=PD14
+Mcu.Pin25=PD15
+Mcu.Pin26=PC7
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
+Mcu.Pin3=PC1
+Mcu.Pin30=PA14
+Mcu.Pin31=PC10
+Mcu.Pin32=PC11
+Mcu.Pin33=PC12
+Mcu.Pin34=PD0
+Mcu.Pin35=PB6
+Mcu.Pin36=VP_CRC_VS_CRC
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin39=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=40
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -120,13 +134,29 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=JOY1_X
 PA1.Signal=ADCx_IN1
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=USB_DM
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=USB_DP
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=JOY1_Y
 PA2.Signal=ADCx_IN2
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=JOY2_X
 PA3.Signal=ADCx_IN3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=JOY2_Y
 PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=DISPL_SCK
@@ -155,15 +185,25 @@ PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB1.Locked=true
 PB1.PinState=GPIO_PIN_SET
 PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=RF_SCK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=RF_CSN
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=RF_CE
 PB13.Locked=true
 PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=RF_MISO
 PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=RF_MOSI
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
@@ -172,8 +212,28 @@ PB2.GPIO_Label=DISPL_DC
 PB2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=Audio_PWM
+PB6.Signal=S_TIM4_CH1
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ADC_Pin
 PC0.Locked=true
 PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=ADC_VR_ESC
+PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=SD_CLK
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=SD_MISO
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=SD_MOSI
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC4.GPIO_Label=TOUCH_INT
 PC4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -187,8 +247,26 @@ PC5.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=DISPL_LED
 PC7.Signal=S_TIM3_CH2
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=SD_CS
+PD0.Locked=true
+PD0.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=LED1
 PD12.Locked=true
 PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=LED2
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=LED3
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=LED4
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -224,43 +302,46 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2-false-HAL-false,11-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2-false-HAL-false
-RCC.48MHZClocksFreq_Value=62400000
-RCC.AHBFreq_Value=124800000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_SPI3_Init-SPI3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2-false-HAL-false,13-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2-false-HAL-false
+RCC.48MHZClocksFreq_Value=48000000
+RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=31200000
-RCC.APB1TimFreq_Value=62400000
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=62400000
-RCC.APB2TimFreq_Value=124800000
-RCC.CortexFreq_Value=124800000
-RCC.EthernetFreq_Value=124800000
-RCC.FCLKCortexFreq_Value=124800000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
+RCC.CortexFreq_Value=168000000
+RCC.EthernetFreq_Value=168000000
+RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=124800000
+RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=153600000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=124800000
-RCC.PLLCLKFreq_Value=124800000
-RCC.PLLM=10
-RCC.PLLN=156
-RCC.PLLQCLKFreq_Value=62400000
+RCC.MCO2PinFreq_Value=168000000
+RCC.PLLCLKFreq_Value=168000000
+RCC.PLLM=25
+RCC.PLLN=336
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=124800000
+RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=307200000
-RCC.VCOInputFreq_Value=1600000
-RCC.VCOOutputFreq_Value=249600000
-RCC.VcooutputI2S=153600000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
+RCC.VCOOutputFreq_Value=336000000
+RCC.VcooutputI2S=96000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN11.0=ADC1_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
@@ -273,16 +354,23 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SPI1.CalculateBaudRate=31.2 MBits/s
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=15.6 MBits/s
+SPI2.CalculateBaudRate=21.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+SPI3.CalculateBaudRate=21.0 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.ApplicationCcGraphicsJjApplication=TouchGFXOoGenerator
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.GraphicsJjApplication_Checked=true
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.IPParameters=tgfx_custom_width,tgfx_custom_height,tgfx_buffering_strategy,tgfx_block_size,ApplicationCcGraphicsJjApplication
@@ -299,6 +387,10 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
 TIM3.Period=100
 TIM3.Prescaler=10000
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-PWM Generation1 CH1
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2.Mode=GraphicsJjApplication
